--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Programação realizada com o objetivo de separar os dados obtidos no Portal da Transparência
-e separá-los por cidade em formatdo PDF.
+por cidade em formatdo PDF.
 
 Orientações
 
